--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -23,8 +23,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ./${NETWORK}:/configs
     ports:
-      - ${LH_PORT}:${LH_PORT}/tcp
-      - ${LH_PORT}:${LH_PORT}/udp
+      - ${CL_P2P_PORT}:${CL_P2P_PORT}/tcp
+      - ${CL_P2P_PORT}:${CL_P2P_PORT}/udp
     expose:
       - 5052/tcp
       - 5054/tcp
@@ -45,7 +45,7 @@ services:
       - --http-port
       - "5052"
       - --port
-      - ${LH_PORT}
+      - ${CL_P2P_PORT}
       - --target-peers
       - ${LH_PEER_COUNT}
       - --execution-endpoints
@@ -66,7 +66,7 @@ services:
       - --terminal-total-difficulty-override
       - ${TOTAL_TERMINAL_DIFFICULTY}
       - --fee-recipient
-      - ${COINBASE}
+      - ${REWARDS_TO}
       - --http-allow-sync-stalled
     labels:
       - traefik.enable=true
