Prep for running validators

--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-consensus.yml:geth.yml
+COMPOSE_FILE=teku-consensus.yml:besu.yml
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 EL_NODE=http://execution:8545
