--- a/lh-base.yml
+++ b/lh-base.yml
@@ -19,13 +19,12 @@ services:
     user: lhconsensus
     stop_grace_period: 1m
     volumes:
-      - lhcl-data:/var/lib/lighthouse
-      - /etc/timezone:/etc/timezone:ro
+      - lhconsensus-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
       - ./${NETWORK}:/configs
     ports:
-      - ${LH_PORT}:${LH_PORT}/tcp
-      - ${LH_PORT}:${LH_PORT}/udp
+      - ${CL_P2P_PORT}:${CL_P2P_PORT}/tcp
+      - ${CL_P2P_PORT}:${CL_P2P_PORT}/udp
     expose:
       - 5052/tcp
       - 5054/tcp
@@ -46,7 +45,7 @@ services:
       - --http-port
       - "5052"
       - --port
-      - ${LH_PORT}
+      - ${CL_P2P_PORT}
       - --target-peers
       - ${LH_PEER_COUNT}
       - --execution-endpoints
@@ -73,8 +72,8 @@ services:
       - 5064/tcp
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
-      - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+      - ./${NETWORK}:/configs
     <<: *logging
     entrypoint:
       - lighthouse
@@ -82,15 +81,17 @@ services:
       - --datadir
       - /var/lib/lighthouse
       - --beacon-nodes
-      - ${CC_NODE}
+      - ${CL_NODE}
       - --graffiti
       - ${GRAFFITI}
-      - --network
-      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
       - --metrics
       - --metrics-address
       - 0.0.0.0
+      - --testnet-dir
+      - /configs
+      - --terminal-total-difficulty-override
+      - ${TOTAL_TERMINAL_DIFFICULTY}
     depends_on:
       - consensus
   validator-import:
@@ -100,7 +101,6 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-      - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - validator-import.sh
@@ -122,8 +122,8 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-      - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+      - ./${NETWORK}:/configs
     entrypoint:
       - validator-exit.sh
       - lighthouse
@@ -134,9 +134,11 @@ services:
       - http://consensus:5052
       - --datadir
       - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+      - --testnet-dir
+      - /configs
+      - --terminal-total-difficulty-override
+      - ${TOTAL_TERMINAL_DIFFICULTY}
       - --keystore
     depends_on:
       - consensus
@@ -147,7 +149,6 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}:/interchange
-      - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - lighthouse
@@ -155,8 +156,6 @@ services:
       - validator
       - --datadir
       - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
   eth:
     image: tianon/true
