--- a/lh-base.yml
+++ b/lh-base.yml
@@ -34,6 +34,7 @@ services:
           - eth2
     <<: *logging
     entrypoint:
+      - find-ip.sh
       - lighthouse
       - bn
       - --disable-upnp
@@ -44,7 +45,9 @@ services:
       - 0.0.0.0
       - --http-port
       - "5052"
-      - --port
+      - --enr-udp-port
+      - ${CL_P2P_PORT}
+      - --enr-tcp-port
       - ${CL_P2P_PORT}
       - --target-peers
       - ${LH_PEER_COUNT}
@@ -64,22 +67,31 @@ services:
       - --disable-packet-filter
       - --terminal-total-difficulty-override
       - ${TOTAL_TERMINAL_DIFFICULTY}
+      - --disable-enr-auto-update
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
-    user: lhvalidator
+    #    user: lhvalidator
+    user: root
     expose:
       - 5064/tcp
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
       - ./${NETWORK}:/configs
+      - ./${NETWORK}-secrets/keys/keys:/keys
+      - ./${NETWORK}-secrets/keys/secrets:/secrets
     <<: *logging
     entrypoint:
       - lighthouse
+      - --testnet-dir
+      - /configs
       - vc
-      - --datadir
-      - /var/lib/lighthouse
+      - --validators-dir
+      - /keys
+      - --secrets-dir
+      - /secrets
+      - --init-slashing-protection
       - --beacon-nodes
       - ${CL_NODE}
       - --graffiti
@@ -88,33 +100,8 @@ services:
       - --metrics
       - --metrics-address
       - 0.0.0.0
-      - --testnet-dir
-      - /configs
-      - --terminal-total-difficulty-override
-      - ${TOTAL_TERMINAL_DIFFICULTY}
     depends_on:
       - consensus
-  validator-import:
-    restart: "no"
-    image: lighthouse:local
-    user: root
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-      - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - validator-import.sh
-      - lighthouse
-      - account
-      - validator
-      - import
-      - --datadir
-      - /var/lib/lighthouse
-      - --directory
-      - /val_keys
-      - --network
-      - ${NETWORK}
-      - --debug-level=${LOG_LEVEL}
   validator-exit:
     restart: "no"
     image: lighthouse:local
@@ -124,21 +111,23 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
       - ./${NETWORK}:/configs
+      - ./${NETWORK}-secrets/keys/keys:/keys
+      - ./${NETWORK}-secrets/keys/secrets:/secrets
     entrypoint:
       - validator-exit.sh
       - lighthouse
+      - --testnet-dir
+      - /configs
       - account
       - validator
       - exit
       - --beacon-node
       - http://consensus:5052
-      - --datadir
-      - /var/lib/lighthouse
+      - --validators-dir
+      - /keys
+      - --secrets-dir
+      - /secrets
       - --debug-level=${LOG_LEVEL}
-      - --testnet-dir
-      - /configs
-      - --terminal-total-difficulty-override
-      - ${TOTAL_TERMINAL_DIFFICULTY}
       - --keystore
     depends_on:
       - consensus
@@ -152,6 +141,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - lighthouse
+      - --testnet-dir
+      - /configs
       - account
       - validator
       - --datadir
