--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -39,7 +39,7 @@ RUN mkdir -p /var/lib/lighthouse/validators && chown ${USER}:${USER} /var/lib/li
 
 RUN set -eux; \
         apt-get update; \
-        apt-get install -y gosu ca-certificates tzdata; \
+        apt-get install -y gosu ca-certificates tzdata wget; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
@@ -47,6 +47,7 @@ RUN set -eux; \
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./validator-exit.sh /usr/local/bin/
+COPY ./find-ip.sh /usr/local/bin/
 
 # For voluntary exit
 ENV KEYSTORE=nonesuch
