--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -23,7 +23,7 @@ RUN adduser \
 
 RUN set -eux; \
         apt-get update; \
-        apt-get install -y gosu ca-certificates bash tzdata; \
+        apt-get install -y gosu ca-certificates bash tzdata wget; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
@@ -35,6 +35,7 @@ RUN mkdir -p /var/lib/nimbus && chown -R user:user /var/lib/nimbus && chmod 700 
 RUN cp /home/user/nimbus-eth2/build/beacon_node /usr/local/bin/nimbus_beacon_node
 # Scripts for privilege change and validator import
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./find-ip.sh /usr/local/bin/
 
 USER user
 
