--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -13,7 +13,7 @@ RUN groupmod -g "${UID}" teku && usermod -u "${UID}" -g "${UID}" teku
 
 RUN set -eux; \
         apt-get update; \
-        apt-get install -y gosu ca-certificates tzdata; \
+        apt-get install -y gosu ca-certificates tzdata wget; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
@@ -22,6 +22,7 @@ RUN set -eux; \
 RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-passwords && chown -R teku:teku /var/lib/teku && chmod -R 700 /var/lib/teku
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./find-ip.sh /usr/local/bin/
 
 USER ${USER}
 
