Fix Lodestar validator startup path

--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -63,7 +63,7 @@ services:
     entrypoint:
       - node
       - --max-old-space-size=8192
-      - /usr/app/packages/cli/bin/lodestar
+      - /usr/app/node_modules/.bin/lodestar
       - validator
       - --rootDir
       - /var/lib/lodestar/validators
