--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -14,7 +14,7 @@ RUN bash -c "git clone https://github.com/ChainSafe/lodestar.git && cd lodestar 
 
 FROM node:16-alpine
 
-RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec && rm -rf /var/cache/apk/*
+RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec wget && rm -rf /var/cache/apk/*
 
 WORKDIR /usr/app
 COPY --from=build /usr/app/lodestar/node_modules ./node_modules/
@@ -23,6 +23,7 @@ COPY --from=build /usr/app/lodestar/packages ./packages
 
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./find-ip.sh /usr/local/bin/
 
 ARG USER=lsconsensus
 ARG UID=10002
