--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -20,6 +20,7 @@ ARG UID=10002
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
   tzdata \
+  wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
@@ -46,6 +47,7 @@ RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-pa
 COPY --from=builder /usr/src/teku/build/install/teku/. /opt/teku/
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./find-ip.sh /usr/local/bin/
 
 USER ${USER}
 
