Change Teku to latest develop

--- a/default.env
+++ b/default.env
@@ -100,7 +100,7 @@ NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-TEKU_DOCKER_TAG=latest
+TEKU_DOCKER_TAG=develop
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
